Fix SVG header growing huge on tablet/mobile

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,4 +1,11 @@
 .site-info {
+  svg {
+    display: block;
+    @include tablet {
+      margin: 0 auto;
+      max-height: 7em;
+    }
+  }
   a {
     float: left;
     color: $gray;
